# email-to-pdf-converter

./: .gitignore  EmailToPDFConverter.spec  README.md  WINDOWS_BUILD_GUIDE.md  build_executable.py  eml_to_pdf_converter.py  pyproject.toml  requirements.txt  vm-build-instructions.md
.cursor/rules/: py-dev.mdc
.github/workflows/: build-windows.yml  test-quick.yml
hooks/: hook-playwright.py  runtime-hook-playwright.py
tests/: test_converter.py
